--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		
+	
+   
 	</head>
 	<body>
 
@@ -40,7 +41,7 @@
 							</header>
 							<p>너네 하이네켄 맥주병이 녹색인 이유 알아? 하이네켄 라벨 레드 스타가 어떤 의미가 있는줄 알아? 
 							친구들과 맥주를 마시면서 저는 항상 하이네켄에 대한 이야기를 해줍니다. 성인되 되고 나서 오로지 
-							Heineken Experience를 체험해보자  암스테르담 여행을 떠날 정도로 하이네켄 매력에 빠졌습니다.
+							Heineken Experience를 체험해보고자  암스테르담 여행을 떠날 정도로 하이네켄 매력에 빠졌습니다.
 							Heineken Experience를 체험하면서 '하이네켄을 위해 일할 수 있으면 얼마나 좋을까' 라는 꿈을 꿨습니다. 
 							이제는 그 꿈을 실현 시키고자 하이네켄을 즐기는 한 명의 고객이 아닌  많은 사람들에게 하이네켄의 매력을 
 							알리는 한 명이 되고 싶습니다.
@@ -50,8 +51,9 @@
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/RUVGRZ40p4w" frameborder="0" allowfullscreen>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/UcaaKlK1qAI" frameborder="0" allowfullscreen>
 								</iframe>
+							
 							</span>
 						</div>
 					</div>
